8194739: Zero port of 8174962: Better interface invocations Reviewed-by: adinn